# manager_task_fastapi

./: .env-dist  README.md  pyproject.toml  requirements.txt
app/: __main__.py  worker.py
app/api/: depends.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: create_task.py  get_task_details.py  get_tasks.py  update_task.py
app/core/: config.py
app/database/: __init__.py  database.py
app/database/models/: __init__.py  base.py  task.py
app/database/repositories/: __init__.py  abstract.py  task.py
app/schemas/: __init__.py  tasks.py
migrations/: env.py
migrations/versions/: f05382657c8b_.py
