[tool.poetry]
name = "test-task-fastapi"
version = "0.1.0"
description = ""
authors = ["fastcode <fast.code.auth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
celery = "^5.3.6"
redis = "^5.0.1"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"
sqlalchemy = "2.0.23"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
flower = "^2.0.1"
eventlet = "^0.33.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
